[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.46.1", features = ["full"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
warp = "0.3"